base/amq/console-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-broker-wconsj-0-svc-rte
spec:
  to:
    kind: Service
    name: my-broker-wconsj-0-svc
    weight: 100
  port:
    targetPort: wconsj-0
  tls:
    termination: reencrypt
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIICxzCCAa+gAwIBAgIEH95pUjANBgkqhkiG9w0BAQsFADAUMRIwEAYDVQQDEwlt
[...]
      -----END CERTIFICATE-----
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-broker-wconsj-1-svc-rte
spec:
  to:
    kind: Service
    name: my-broker-wconsj-1-svc
    weight: 100
  port:
    targetPort: wconsj-1
  tls:
    termination: reencrypt
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIICxzCCAa+gAwIBAgIEH95pUjANBgkqhkiG9w0BAQsFADAUMRIwEAYDVQQDEwlt
[...]
      -----END CERTIFICATE-----
